--- a/package.json
+++ b/package.json
@@ -29,47 +29,43 @@
   "keywords": [
     "bionode",
     "biojs",
-    "bigwig",
-    "bigbed",
     "ucsc",
     "genomics"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.4.2",
+    "@babel/runtime": "^7.4.3",
     "abortable-promise-cache": "^1.0.1",
-    "cross-fetch": "^3.0.1",
+    "cross-fetch": "^3.0.2",
     "es6-promisify": "^6.0.1",
-    "quick-lru": "^3.0.0",
-    "rxjs": "^6.4.0"
+    "quick-lru": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
-    "@gmod/bed": "^1.0.3",
     "@types/jest": "^24.0.11",
-    "@types/long": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "babel-eslint": "^10.0.1",
     "babel-preset-typescript": "^7.0.0-alpha.19",
     "documentation": "^9.3.1",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "jest": "^24.5.0",
+    "fetch-mock": "^7.3.1",
+    "jest": "^24.7.1",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
     "standard-changelog": "^2.0.7",
-    "ts-jest": "^24.0.0",
+    "ts-jest": "^24.0.2",
     "typedoc": "^0.14.2",
     "typedoc-plugin-markdown": "^1.1.27",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.4.3"
   },
   "publishConfig": {
     "access": "public"
