--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "fetch-mock": "^7.3.1",
     "jest": "^24.7.1",
     "prettier": "^1.16.4",
+    "range-parser": "^1.2.0",
     "rimraf": "^2.6.3",
     "standard-changelog": "^2.0.7",
     "ts-jest": "^24.0.2",
