--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/fetch-mock": "^7.2.3",
     "@types/jest": "^24.0.11",
+    "@types/range-parser": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "babel-eslint": "^10.0.1",
