--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noEmit": true,
     "outDir": "./dist",
     "strict": true,
-    "removeComments": false
+    "removeComments": false,
+    "allowSyntheticDefaultImports": true
   }
 }
