--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generic-filehandle",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "dist/index.js",
   "license": "MIT",
   "author": {
@@ -19,10 +19,9 @@
     "coverage": "npm test -- --coverage",
     "lint": "eslint --ext .ts src test",
     "clean": "rimraf dist",
-    "docs": "typedoc --theme markdown --out docs --readme none src/",
     "prebuild": "npm run clean",
     "build": "tsc && babel ./src --out-dir dist --extensions '.ts'",
-    "preversion": "npm run lint && npm test && npm run docs && npm run build",
+    "preversion": "npm run lint && npm test && npm run build",
     "version": "standard-changelog && git add CHANGELOG.md",
     "postpublish": "git push origin master --follow-tags"
   },
@@ -66,8 +65,6 @@
     "rimraf": "^2.6.3",
     "standard-changelog": "^2.0.7",
     "ts-jest": "^24.0.2",
-    "typedoc": "^0.14.2",
-    "typedoc-plugin-markdown": "^1.1.27",
     "typescript": "^3.4.3"
   },
   "publishConfig": {
