--- a/package.json
+++ b/package.json
@@ -34,10 +34,8 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.4.3",
-    "abortable-promise-cache": "^1.0.1",
     "cross-fetch": "^3.0.2",
-    "es6-promisify": "^6.0.1",
-    "quick-lru": "^2.0.0"
+    "es6-promisify": "^6.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
