--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "@babel/runtime": "^7.4.3",
     "cross-fetch": "^3.0.2",
-    "es6-promisify": "^6.0.1"
+    "es6-promisify": "^6.0.1",
+    "file-uri-to-path": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
