--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "range-parser": "^1.2.0",
     "rimraf": "^2.6.3",
     "standard-changelog": "^2.0.7",
+    "tenacious-fetch": "^2.2.2",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.3"
   },
