--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-prettier": "^3.0.1",
     "fetch-mock": "^7.3.1",
     "jest": "^24.7.1",
