--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "generic-filehandle",
+  "description": "uniform interface for accessing binary data from local files, remote HTTP resources, and browser Blob data",
   "version": "1.0.9",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
