--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
   "rules": {
     "no-underscore-dangle": 0,
     "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/ban-ts-ignore": 0,
+    "@typescript-eslint/no-empty-function": 0,
     "@typescript-eslint/explicit-function-return-type": [2, { "allowExpressions": true }],
     "semi": [
       "error",
