--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "es6-promisify": "^6.0.1",
+    "fetch-progress": "^1.2.0",
     "file-uri-to-path": "^1.0.0"
   },
   "devDependencies": {
