--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "no-underscore-dangle": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/explicit-function-return-type": [2, { "allowExpressions": true }],
+    "curly": "error",
     "semi": [
       "error",
       "never"
