--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
+    "build:js": "babel src --out-dir dist --extensions \".js,.ts,.tsx\" --source-maps inline",
     "build": "npm run build:types && npm run build:js",
-    "watch": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline --watch",
     "preversion": "npm run lint && npm test && npm run build",
     "version": "standard-changelog && git add CHANGELOG.md",
     "postpublish": "git push origin master --follow-tags"
@@ -40,6 +39,7 @@
   "dependencies": {
     "@babel/runtime": "^7.9.6",
     "es6-promisify": "^6.1.1",
+    "fetch-progress": "^1.2.0",
     "file-uri-to-path": "^2.0.0"
   },
   "devDependencies": {
