--- a/package.json
+++ b/package.json
@@ -1,77 +1,70 @@
 {
-  "name": "generic-filehandle",
-  "description": "uniform interface for accessing binary data from local files, remote HTTP resources, and browser Blob data",
   "version": "2.1.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "repository": "GMOD/generic-filehandle",
   "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
+  "scripts": {
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "test:watch": "tsdx test --watch",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
+  },
+  "peerDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
   "author": {
     "name": "Colin Diesh",
     "email": "colin.diesh@gmail.com",
     "url": "https://github.com/cmdcolin"
   },
-  "engines": {
-    "node": ">=6"
+  "prettier": {
+    "printWidth": 80,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
-  "files": [
-    "dist"
+  "name": "generic-filehandle",
+  "module": "dist/generic-filehandle.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/generic-filehandle.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/generic-filehandle.esm.js",
+      "limit": "10 KB"
+    }
   ],
-  "scripts": {
-    "test": "jest",
-    "coverage": "npm test -- --coverage",
-    "lint": "eslint --ext .ts src test",
-    "clean": "rimraf dist",
-    "prebuild": "npm run clean",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
-    "build": "npm run build:types && npm run build:js",
-    "watch": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline --watch",
-    "preversion": "npm run lint && npm test && npm run build",
-    "version": "standard-changelog && git add CHANGELOG.md",
-    "postversion": "git push --follow-tags"
+  "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.10.1",
+    "@types/range-parser": "^1.2.3",
+    "fetch-mock": "^9.11.0",
+    "husky": "^5.2.0",
+    "node-fetch": "^2.6.1",
+    "range-parser": "^1.2.1",
+    "size-limit": "^4.10.1",
+    "tenacious-fetch": "^2.3.0",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   },
-  "keywords": [
-    "bionode",
-    "biojs",
-    "ucsc",
-    "genomics"
-  ],
   "dependencies": {
-    "@babel/runtime": "^7.9.6",
     "es6-promisify": "^6.1.1",
     "file-uri-to-path": "^2.0.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/fetch-mock": "^7.3.0",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.5",
-    "@types/range-parser": "^1.2.3",
-    "@typescript-eslint/eslint-plugin": "^2.32.0",
-    "@typescript-eslint/parser": "^2.32.0",
-    "babel-eslint": "^10.0.1",
-    "cross-fetch": "^3.0.3",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^23.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "fetch-mock": "^9.7.0",
-    "jest": "^26.0.1",
-    "prettier": "^2.0.5",
-    "range-parser": "^1.2.1",
-    "rimraf": "^3.0.2",
-    "standard-changelog": "^2.0.24",
-    "tenacious-fetch": "^2.3.0",
-    "ts-jest": "^25.5.1",
-    "typescript": "^3.5.1"
   },
   "publishConfig": {
     "access": "public"
