--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   },
   "dependencies": {
     "es6-promisify": "^6.1.1",
-    "file-uri-to-path": "^2.0.0"
+    "file-uri-to-path": "^2.0.0",
+    "global-object": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
