feat: resolve empty for node-specific modules in browser context

--- a/package.json
+++ b/package.json
@@ -75,5 +75,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "browser": {
+    "./dist/localFile.js": false,
+    "file-uri-to-path": false
   }
 }
