--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
+  "include": ["src"],
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "types": ["node", "jest"],
+    "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "outDir": "./dist",
     "strict": true,
@@ -9,8 +10,5 @@
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
-  },
-  "include": [
-    "src"
-  ]
+  }
 }
