--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "uniform interface for accessing binary data from local files, remote HTTP resources, and browser Blob data",
   "version": "2.2.1",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "module": "esm/index.js",
   "repository": "GMOD/generic-filehandle",
   "license": "MIT",
   "author": {
@@ -15,7 +15,8 @@
     "node": ">=6"
   },
   "files": [
-    "dist"
+    "dist",
+    "esm"
   ],
   "scripts": {
     "test": "jest",
@@ -23,7 +24,7 @@
     "lint": "eslint --ext .ts src test",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
-    "build": "tsc",
+    "build": "tsc --target es2018 --outDir esm && tsc --target es5 --outDir dist",
     "watch": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline --watch",
     "preversion": "npm run lint && npm test && npm run build",
     "version": "standard-changelog && git add CHANGELOG.md",
@@ -68,6 +69,7 @@
   },
   "browser": {
     "./dist/localFile.js": false,
+    "./esm/localFile.js": false,
     "file-uri-to-path": false
   }
 }
