--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "jest",
     "coverage": "npm test -- --coverage",
     "lint": "eslint --ext .ts src test",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist esm",
     "prebuild": "npm run clean",
     "build": "tsc --target es2018 --outDir esm && tsc --target es5 --outDir dist",
     "watch": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline --watch",
