Split out build script so we can yarn build:esm --watch

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "lint": "eslint --ext .ts src test",
     "clean": "rimraf dist esm",
     "prebuild": "npm run clean",
-    "build": "tsc --target es2018 --outDir esm && tsc --target es5 --outDir dist",
+    "build:esm": "tsc --target es2018 --outDir esm",
+    "build:es5": "tsc --target es5 --outDir dist",
+    "build": "npm run build:esm && npm run build:es5",
     "watch": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline --watch",
     "preversion": "npm run lint && npm test && npm run build",
     "version": "standard-changelog && git add CHANGELOG.md",
