--- a/package.json
+++ b/package.json
@@ -43,24 +43,25 @@
   },
   "devDependencies": {
     "@types/fetch-mock": "^7.3.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^13.13.5",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.0.6",
     "@types/range-parser": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "cross-fetch": "^3.0.3",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "fetch-mock": "^9.7.0",
-    "jest": "^27.4.5",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "prettier": "^2.5.1",
     "range-parser": "^1.2.1",
     "rimraf": "^3.0.2",
     "standard-changelog": "^2.0.24",
     "tenacious-fetch": "^2.3.0",
-    "ts-jest": "^27.1.1",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.5.4"
   },
   "publishConfig": {
