--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generic-filehandle",
+  "name": "generic-filehandle2",
   "description": "uniform interface for accessing binary data from local files, remote HTTP resources, and browser Blob data",
   "version": "3.1.1",
   "main": "dist/index.js",
