--- a/package.json
+++ b/package.json
@@ -43,27 +43,28 @@
     "es6-promisify": "^6.1.1"
   },
   "devDependencies": {
-    "@types/fetch-mock": "^7.3.0",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^12.12.6",
-    "@types/range-parser": "^1.2.3",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "cross-fetch": "^3.0.3",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "@types/fetch-mock": "^7.3.8",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.24",
+    "@types/range-parser": "^1.2.7",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "cross-fetch": "^4.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unicorn": "^51.0.1",
     "fetch-mock": "^9.7.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^2.8.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.2.5",
     "range-parser": "^1.2.1",
-    "rimraf": "^3.0.2",
-    "standard-changelog": "^2.0.24",
+    "rimraf": "^5.0.5",
+    "standard-changelog": "^5.0.0",
     "tenacious-fetch": "^2.3.0",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "access": "public"
