--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "jest",
     "coverage": "npm test -- --coverage",
-    "lint": "eslint --ext .ts src test",
+    "lint": "eslint --report-unused-disable-directives --max-warnings 0 src test",
     "clean": "rimraf dist esm",
     "prebuild": "npm run clean",
     "build:esm": "tsc --target es2018 --outDir esm",
@@ -50,12 +50,12 @@
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "cross-fetch": "^4.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-unicorn": "^51.0.1",
-    "fetch-mock": "^9.7.0",
+    "eslint-plugin-unicorn": "^54.0.0",
+    "fetch-mock": "^10.0.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
