--- a/package.json
+++ b/package.json
@@ -47,24 +47,24 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@types/range-parser": "^1.2.7",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "cross-fetch": "^4.0.0",
-    "eslint": "^9.5.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-unicorn": "^54.0.0",
+    "eslint-plugin-unicorn": "^56.0.1",
     "fetch-mock": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.4.1",
     "range-parser": "^1.2.1",
     "rimraf": "^6.0.0",
     "standard-changelog": "^6.0.0",
     "tenacious-fetch": "^2.3.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.8.0-dev.20241201"
   },
   "publishConfig": {
     "access": "public"
