--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./dist",
     "strict": true,
     "removeComments": false,
+    "skipLibCheck": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
