--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "src"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "coverage": "npm test -- --coverage",
     "lint": "eslint --report-unused-disable-directives --max-warnings 0 src test",
     "clean": "rimraf dist esm",
-    "prebuild": "npm run clean",
+    "prebuild": "yarn clean",
     "build:esm": "tsc --target es2018 --outDir esm",
     "build:es5": "tsc --target es2015 --module commonjs --outDir dist",
-    "build": "npm run build:esm && npm run build:es5",
+    "build": "yarn build:esm && yarn build:es5",
     "watch": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline --watch",
-    "preversion": "npm run lint && npm test && npm run build",
+    "preversion": "yarn lint && yarn test --run && yarn build",
     "version": "standard-changelog && git add CHANGELOG.md",
     "postversion": "git push --follow-tags"
   },
@@ -44,7 +44,6 @@
   },
   "devDependencies": {
     "@types/fetch-mock": "^7.3.8",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@types/range-parser": "^1.2.7",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
@@ -56,15 +55,13 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unicorn": "^56.0.1",
     "fetch-mock": "^9.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.4.1",
     "range-parser": "^1.2.1",
     "rimraf": "^6.0.0",
     "standard-changelog": "^6.0.0",
     "tenacious-fetch": "^2.3.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.8.0-dev.20241201"
+    "typescript": "^5.8.0-dev.20241201",
+    "vitest": "^2.1.6"
   },
   "publishConfig": {
     "access": "public"
