--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": ["src"],
   "compilerOptions": {
-    "types": ["node", "jest"],
+    "types": ["node"],
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "sourceMap": true,
