--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "rimraf": "^6.0.0",
     "standard-changelog": "^6.0.0",
     "tenacious-fetch": "^2.3.0",
-    "typescript": "^5.8.0-dev.20241201",
+    "typescript": "^5.8.0",
     "vitest": "^2.1.6"
   },
   "publishConfig": {
@@ -68,7 +68,6 @@
   },
   "browser": {
     "./dist/localFile.js": false,
-    "./esm/localFile.js": false,
-    "file-uri-to-path": false
+    "./esm/localFile.js": false
   }
 }
