--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "lint": "eslint --report-unused-disable-directives --max-warnings 0 src test",
     "clean": "rimraf dist esm",
     "prebuild": "yarn clean",
-    "build:esm": "tsc --target es2018 --outDir esm",
-    "build:es5": "tsc --target es2015 --module commonjs --outDir dist",
+    "build:esm": "tsc --outDir esm",
+    "build:es5": "tsc --module commonjs --outDir dist",
     "build": "yarn build:esm && yarn build:es5",
     "watch": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline --watch",
     "preversion": "yarn lint && yarn test --run && yarn build",
