--- a/package.json
+++ b/package.json
@@ -39,29 +39,24 @@
     "ucsc",
     "genomics"
   ],
-  "dependencies": {
-    "es6-promisify": "^6.1.1"
-  },
   "devDependencies": {
     "@types/fetch-mock": "^7.3.8",
     "@types/node": "^20.11.24",
     "@types/range-parser": "^1.2.7",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
-    "cross-fetch": "^4.0.0",
+    "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-unicorn": "^56.0.1",
     "fetch-mock": "^9.0.0",
+    "node-fetch": "^2.0.0",
     "prettier": "^3.4.1",
     "range-parser": "^1.2.1",
     "rimraf": "^6.0.0",
     "standard-changelog": "^6.0.0",
-    "tenacious-fetch": "^2.3.0",
-    "typescript": "^5.8.0",
-    "vitest": "^2.1.6"
+    "typescript": "^5.7.0",
+    "typescript-eslint": "^8.18.0",
+    "vitest": "^2.1.8"
   },
   "publishConfig": {
     "access": "public"
