--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "removeComments": false,
     "skipLibCheck": true,
     "declaration": true,
+    "noUncheckedIndexedAccess": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   }
